--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
             <div class="signin-container">
                 <form class="form-signin" role="form" action="JavaScript:submitAPIkey()">
-                    <h2 class="form-signin-heading">YPOOL MONITOR</h2>
+                    <h2 class="form-signin-heading">ypool Mining Monitor</h2>
                     <input name="key" type="text" class="form-control" placeholder="API Key" required>
                     <button class="btn btn-lg btn-primary btn-block" id="submitAPIkey-button" type="submit" autocomplete="off">Submit</button>
                 </form>
