--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="YPOOL Mining Hardware Monitor">
+        <meta name="description" content="Cryptocurrency mining hardware monitor for the ypool mining pool (ypool.net).">
         <meta name="author" content="Michael Markieta">
-        <title>YPOOL MONITOR</title>
+        <title>ypool Mining Monitor</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/signin.css" rel="stylesheet">
         <link href="css/sticky-footer-navbar.css" rel="stylesheet">
