--- a/index.html
+++ b/index.html
@@ -191,15 +191,21 @@
         <script src="js/ypoolmonitor.js"></script>
 
 	<!-- Start of StatCounter Code for Default Guide -->
-	< script type = "text/javascript" >
-	var sc_project = 9545973;
-	var sc_invisible = 1;
-	var sc_security = "d46aaa30";
+	<script type="text/javascript">
+	var sc_project=9545973; 
+	var sc_invisible=1; 
+	var sc_security="d46aaa30"; 
 	var scJsHost = (("https:" == document.location.protocol) ?
-		"https://secure." : "http://www.");
-	document.write("<sc" + "ript type='text/javascript' src='" +
-		scJsHost +
-		"statcounter.com/counter/counter.js'></" + "script>"); < /script>
+	"https://secure." : "http://www.");
+	document.write("<sc"+"ript type='text/javascript' src='" +
+	scJsHost+
+	"statcounter.com/counter/counter.js'></"+"script>");
+	</script>
+	<noscript><div class="statcounter"><a title="hit counter"
+	href="http://statcounter.com/free-hit-counter/"
+	target="_blank"><img class="statcounter"
+	src="http://c.statcounter.com/9545973/0/d46aaa30/1/"
+	alt="hit counter"></a></div></noscript>
 	<!-- End of StatCounter Code for Default Guide -->
 
     </body>
