add support for MTC

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                             <li>
                                 <a role="menuitem" tabindex="-1" href="javascript:void(0)">DOGE</a>
                             </li>
+                            <li>
+                                <a role="menuitem" tabindex="-1" href="javascript:void(0)">MTC</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="active">
